# agentUniverse

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CHANGELOG_zh.md  LICENSE  MANIFEST.in  README.md  README_PYPI.md  README_jp.md  README_zh.md  drama_app.tar  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
sample_standard_app/: .gitignore  README.md  README_zh.md  dir_structure_updater.py  install_conda.sh  pyproject.toml  quick_start.bat  quick_start.ps1  quick_start.sh  setup_env.sh
sample_standard_app/DB/: criminal_law_sqlite.db
sample_standard_app/app/biz/: __init__.py
sample_standard_app/app/bootstrap/: product_application.py  server_application.py
sample_standard_app/app/core/agent/: __init__.py  host_agent.py  host_agent.yaml  participant_agent_one.yaml  participant_agent_two.yaml  work_agent.yaml
sample_standard_app/app/core/knowledge/: civil_law_knowledge.py  civil_law_knowledge.yaml  criminal_law_knowledge.py  criminal_law_knowledge.yaml  demo_knowledge.py  demo_knowledge.yaml  law_knowledge.py  law_knowledge.yaml  read.py
sample_standard_app/app/core/llm/: baichuan_llm.yaml  claude_llm.yaml  customized_llm.yaml  deep_seek_opneai_llm.yaml  demo_llm.yaml  qwen_llm.yaml  wenxin_langchain_instance.py  wenxin_llm.py  wenxin_llm.yaml
sample_standard_app/app/core/memory/: demo_chroma_memory.yaml  demo_local_memory.yaml  demo_memory.py  demo_memory.yaml  demo_memory_a.yaml  demo_memory_b.yaml  demo_sql_memory.yaml  demo_temporary_memory.yaml
sample_standard_app/app/core/memory_compressor/: __init__.py
sample_standard_app/app/core/memory_storage/: chroma_memory_storage.yaml  mysql_memory_storage.yaml
sample_standard_app/app/core/planner/: __init__.py  discussion_planner.py  discussion_planner.yaml
sample_standard_app/app/core/product/: google_search_product.yaml  host_agent_product.yaml  openai_llm_product.yaml  peer_agent_product.yaml  qwen_llm_product.yaml  rag_agent_product.yaml  react_agent_product.yaml
sample_standard_app/app/core/prompt/: dataset_eval_agent_cn.yaml  dataset_eval_agent_en.yaml  demo_rag_agent_cn.yaml  demo_rag_agent_en.yaml  eval_agent_cn.yaml  executing_agent_cn.yaml  expressing_agent_cn.yaml  host_agent_cn.yaml  host_agent_en.yaml  my_planning_agent_cn.yaml  participant_agent_cn.yaml  participant_agent_en.yaml  planning_agent_cn.yaml
sample_standard_app/app/core/query_paraphraser/: __init__.py
sample_standard_app/app/core/rag_router/: nlu_rag_router.yaml
sample_standard_app/app/core/service/: demo_fast_slow_service.yaml  draft_contract_service.yaml  law_service.yaml  translation_service.yaml
sample_standard_app/app/core/sqldb_wrapper/: __init__.py  demo_sqldb_wrapper.yaml  memory_sqldb_wrapper.yaml  mysql_sqldb_wrapper.yaml  sqlite_sqldb_wrapper.yaml
sample_standard_app/app/core/store/: civil_law_chroma_store.yaml  civil_law_sqlite_store.yaml  criminal_law_chroma_store.yaml  criminal_law_sqlite_store.yaml
sample_standard_app/app/core/tool/: add_simple_tool.yaml  bing_search_tool.py  bing_search_tool.yaml  demo_tool.py  demo_tool.yaml  div_simple_tool.yaml  gen_image_tool.py  gen_image_tool.yaml  google_search_tool.py  google_search_tool.yaml  human_input_run.yaml  langchain_tool.py  mock_search_tool.py  mock_search_tool.yaml  mul_simple_tool.yaml  python_repl.py  python_repl_tool.yaml  request_get_tool.yaml  request_post_tool.yaml  request_tool.py  search_api_baidu_tool.yaml  search_api_bing_tool.yaml  search_api_tool.py  simple_math_tool.py  sub_simple_tool.yaml  test_plugin_arxiv.yaml  test_plugin_test.yaml
sample_standard_app/app/core/workflow/: __init__.py  demo_workflow.yaml  workflow-123.yaml  workflow_456.yaml
sample_standard_app/app/examples/: __init__.py  data_agent.py  discussion_chat_bots.py  example_start.bat  example_start.ps1  example_start.sh  gen_image_bot.py  law_chat_bot.py  my_chat_bot.py  peer_chat_bot.py  product_platform.py  question_chat_bot.py  rag_chat_bot.py  react_chat_bot.py
sample_standard_app/app/examples/data/: dataset_turn_1_2024-07-08-20:17:28.jsonl  dataset_turn_1_2024-07-09-11:45:42.jsonl  dataset_turn_1_2024-07-09-20:46:11.jsonl  dataset_turn_1_2024-07-10-10:48:30.jsonl  eval_report_2024-07-08-20:17:28.xlsx  (+10 more)
sample_standard_app/app/mycode/: test.py
sample_standard_app/app/test/: rag_agent_result.txt  test_api_tool.py  test_data_agent.py  test_deep_seek_llm.py  test_discussion_agents.py  test_doe_agent.py  test_dual_system_agent.py  test_expressing_agent.py  test_grpc_server.py  test_multimodal_agent.py  test_peer_agent.py  test_peer_agents.py  test_playwight.py  test_plugin.py  test_rag_agent.py  test_react_agent.py  test_search_tool.py  test_server_application.py  test_sqldb_wrapper.py  test_translation_agent.py  test_utils.py
sample_standard_app/app/util/: __init__.py  jsonl_file_utils.py  txt_file_utils.py
sample_standard_app/app/web/: __init__.py
sample_standard_app/boostrap/platform/: __init__.py  product_application.py
sample_standard_app/config/: config.toml  custom_key.toml.sample  debug_log_config.toml  gunicorn_config.toml  log_config.toml
sample_standard_app/data/dispatch/: dispatch.py  dispatch.yaml
sample_standard_app/data/flow/: auto_event.yaml  dataset_build.yaml  eval_report.yaml  instruct_select.yaml  model_deploy.yaml
sample_standard_app/dataflow/: __init__.py
sample_standard_app/dataflow/dispatch/: __init__.py  dispatch.py  dispatch.yaml
sample_standard_app/dataflow/flow/: auto_event.yaml  dataset_build.yaml  eval_report.yaml  instruct_select.yaml
sample_standard_app/examples/: rag_chat_bot.py
sample_standard_app/intelligence/db/: civil_law_sqlite.db
sample_standard_app/intelligence/test/: __init__.py  data_agent.py  discussion_chat_bots.py  law_chat_bot.py  peer_chat_bot.py  test_discussion_agents.py  test_executing_agent.py  test_grpc_server.py  test_nl2api_agent.py  test_planning_agent.py  test_rag_agent.py  test_react_agent.py  test_reviewing_agent.py  test_server_application.py  test_translation_agent.py  test_wenxin_llm.py
sample_standard_app/platform/: __init__.py
sample_standard_app/platform/difizen/: __init__.py
(+1504 files in other folders)
